Fix Java deprecation warnings for wrapper constructors
- Replace new Double(x) with Double.valueOf(x) throughout codebase
- Replace new Integer(x) with Integer.valueOf(x) throughout codebase
- Replace new Long(x) with Long.valueOf(x) throughout codebase
- Replace new Character(x) with Character.valueOf(x) throughout codebase
- Maintains Java 8 compatibility while eliminating 39 compiler warnings
- All 341 tests continue to pass

🤖 Generated with Claude Code

Co-Authored-By: Claude <noreply@anthropic.com>